# lez-payment-streams

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPER_JOURNEY.md  LICENSE-MIT  Makefile  README.md  USER_JOURNEY.md  architecture.md  design.md  flake.nix  handoff.md  integration-index.md  integration-plan-v2.md  integration-plan.md  lez-payment-streams-idl.json  logos-architecture-overview.md  plan.md  scaffold.toml  spel.toml
docs/: 6c-universal-legacy-probe-results.md  AGENT-BRIEF.md  README.md  context-manifest.json  demo-localnet-recovery.md  feature-branch-pins.md  handoff-deposit-zero-instruction.md  integration-contracts.md  logos-operator-install-basics.md  logos-runtime-guide.md  presentation.md  ps-module-integration-test-loop.md  step1-findings-scaffold-rpc.md  step10a-handoff-and-follow-up.md  step10a-local-chain-fixture.md  step10b-wallet-runtime.md  step11a-chain-reads.md  step11b-chain-writes.md  step11c-sign-public-payload.md  step11d-wallet-510.md  step12-user-eligibility.md  step13-provider-eligibility.md  step17-e2e-local.md  step18-public-sequencer-e2e.md  step3-stream-provider-policy.md  step3a-implementor-notes.md  step6b-implementation-guidance.md  step6c-implementation-guidance.md  step8-universal-legacy-probe-results.md  temp-spel-issue-pda-account-seeds.md  testnet-claim-known-issue.md  tmp_c_ffi_note.md  universal-vs-legacy-dilemma.md  verification-matrix.md
docs/archive/: completed-steps-index.md  engineering-notes.md  implementation-plan-on-chain.md  integration-plan-full.md  integration-plan-v2-full.md  legacy-module-bootstrap.md  superseded-wallet-pr-429-16.md
docs/development-map/: README.md  program-index.md
docs/journeys/: DEVELOPER_JOURNEY.md  E2E.md  PRIVACY_ENHANCED_JOURNEY.md  USER_JOURNEY.md
docs/on-chain/: README.md  architecture.md
docs/payment-streams-module/: README.md  runbook.md  setup.md
docs/plan/: README.md  index.md
docs/reference/: README.md  decisions-and-notes.md  feature-branch-pins.md  integration-contracts.md  integration-decisions.md  logos-architecture-overview.md  naming-conventions.md  verification-matrix.md
docs/store-integration/: README.md  runbook-localnet.md  runbook-testnet.md
examples/: Cargo.toml
fixtures/: localnet-debug.json  localnet.json.example  testnet-module.json  testnet-wallet_config.example.json  testnet.json.example
lez-payment-streams-core/: Cargo.toml
lez-payment-streams-core/src/: error_codes.rs  harness_seeds.rs  instruction.rs  instruction_accounts.rs  instruction_wire.rs  lib.rs  pda.rs  stream_config.rs  stream_provider_policy.rs  test_helpers.rs  vault.rs
lez-payment-streams-core/src/off_chain/: canonical.rs  constants.rs  mod.rs  proofs.rs  protobuf.rs  wire_error.rs
lez-payment-streams-core/src/policy/: mod.rs  predicates.rs
lez-payment-streams-core/src/program_tests/: claim.rs  close_stream.rs  common.rs  create_stream.rs  deposit.rs  initialize.rs  invariants.rs  mod.rs  pause_stream.rs  pp_common.rs  privacy_tier_policy.rs  resume_stream.rs  serialization.rs  top_up.rs  withdraw.rs
lez-payment-streams-ffi/: Cargo.toml  build.rs  cbindgen.toml  lez_payment_streams_ffi.h
lez-payment-streams-ffi/src/: decode.rs  instruction_abi.rs  lib.rs  policy_abi.rs  proof_abi.rs
lez-payment-streams-ffi/tests/: c_header_smoke.c
lez_payment_streams_core/: Cargo.toml
lez_payment_streams_core/src/: clock_wire.rs  error_codes.rs  harness_seeds.rs  instruction.rs  lib.rs  mock_timestamp.rs  stream_config.rs  test_helpers.rs  test_pda.rs  vault.rs  vault_tests.rs
lez_payment_streams_core/src/program_tests/: accrual.rs  claim.rs  close_stream.rs  common.rs  create_stream.rs  deposit.rs  initialize.rs  invariants.rs  mod.rs  pause_resume.rs  pause_stream.rs  pp_common.rs  privacy_tier_policy.rs  resume_stream.rs  seeds.rs  serialization.rs  shielded_execution.rs  top_up.rs  withdraw.rs
logos-payment-streams-module/: CMakeLists.txt  flake.nix  metadata.json
logos-payment-streams-module/src/: i_payment_streams_module.h  payment_streams_ffi_bridge.c  payment_streams_ffi_bridge.h  payment_streams_ffi_bridge_writes.c  payment_streams_module_eligibility.cpp  payment_streams_module_impl.cpp  payment_streams_module_impl.h  payment_streams_module_inventory.h  payment_streams_module_plugin.cpp  payment_streams_module_plugin.h  payment_streams_module_writes.cpp  payment_streams_privacy_policy.cpp  payment_streams_privacy_policy.h
logos-payment-streams-module/tests/: CMakeLists.txt  test_privacy_submit_policy.cpp
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
nix/: payment-streams-ffi.nix
scripts/: README.md  auth-transfer-ensure.sh  bootstrap-testnet-module.sh  bootstrap-testnet.sh  build-wallet-lgx.sh  create-localnet-stream-fixture.sh  create-testnet-stream-fixture.sh  demo-e2e-local.sh  demo-localnet-fresh.sh  demo-localnet-prepare.sh  demo-stream-teardown-localnet.sh  deploy-program-logoscore.sh  deploy-testnet.sh  e2e.sh  fixture.sh  fund-testnet-accounts.sh  lifecycle.sh  localnet-snapshot-common.sh  module-e2e-local.sh  module-e2e-privacy.sh  module-e2e.sh  prefund-localnet.sh  reinit-scaffold-wallet.sh  restore-localnet.sh  seed-localnet-fixture.sh  snapshot-localnet.sh  step11b-logoscore-e2e.sh  step12-topup-and-prepare.sh  sync-seed-wallet-after-logoscore.sh  testnet-common.sh  testnet_rpc.py  user-journey-auth-transfer.sh  user-journey-install-modules.sh  user-journey-lgs-setup.sh  user-journey-reset.sh  user-journey-shell.sh  validate-restructure.sh  verify-step10a-dod.sh  verify-step10b-dod.sh  verify-step11a-dod.sh  (+10 more)
scripts/archive/: bootstrap-testnet.sh  build-wallet-lgx.sh  clear-demo-module-persist.sh  create-localnet-stream-fixture.sh  create-testnet-stream-fixture.sh  demo-e2e-local.sh  demo-localnet-fresh.sh  demo-localnet-prepare.sh  demo-stream-teardown-localnet.sh  ensure-scaffold-lez-layout.sh  localnet-snapshot-common.sh  prefund-localnet.sh  reinit-scaffold-wallet.sh  restore-localnet.sh  (+17 more)
tools/lez-testnet-submit/: Cargo.toml  flake.nix
tools/lez-testnet-submit/src/: legacy_sequencer.rs  main.rs  sequencer_rpc.rs  submit.rs
(+116 files in other folders)
