# LEZ git pin for host/guest/tests: rev 27360cb7 (v0.2.0-rc5). See docs/plan/completed/step-24b-rc5-rust-lee-unify.md.
[workspace]
members = [
    "lez-payment-streams-core",
    "lez-payment-streams-ffi",
    "methods",
]
exclude = [
    "methods/guest",
    "tools/lez-testnet-submit",
]
resolver = "2"

[patch."https://github.com/logos-co/spel.git"]
spel-framework-core = { path = "vendor/spel-framework-core" }
spel-framework-macros = { path = "vendor/spel-framework-macros" }
spel-framework = { path = "vendor/spel-framework" }
