# LEZ git pin for host/guest/tests: rev a58fbce2 (v0.2.0). See docs/plan/upcoming/step-26-testnet-v02-migration.md.
[workspace]
members = [
    "lez-payment-streams-core",
    "lez-payment-streams-ffi",
    "methods",
]
exclude = [
    "methods/guest",
    "tools/lez-testnet-submit",
]
resolver = "2"

[patch."https://github.com/logos-co/spel.git"]
spel-framework-core = { path = "vendor/spel-framework-core" }
spel-framework-macros = { path = "vendor/spel-framework-macros" }
spel-framework = { path = "vendor/spel-framework" }
