[package]
name = "lez-payment-streams-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["host"]
# Host-side LEE (`lee` crate): instruction wire + off-chain proofs. Disabled for RISC0 guest builds.
host = ["dep:lee"]
# Privacy-preserving LEE proving tests in `program_tests` (slow). Enable with `--features pp-program-tests`.
pp-program-tests = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
hex = "0.4"
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
# LEZ pin: PR 510 merge — must match scaffold.toml [repos.lez].pin (Step 24).
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "62d9ba10f8f86db3a1f04b329a1bd9d5b893bf60", features = ["test-utils"], optional = true }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "62d9ba10f8f86db3a1f04b329a1bd9d5b893bf60", features = ["host"] }
clock_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "62d9ba10f8f86db3a1f04b329a1bd9d5b893bf60" }
sha2 = "0.10"
spel-framework-macros = { git = "https://github.com/logos-co/spel.git", tag = "v0.5.0" }
spel-framework-core = { git = "https://github.com/logos-co/spel.git", tag = "v0.5.0" }

[[bin]]
name = "n8_canonical_wire_hex"
path = "src/bin/n8_canonical_wire_hex.rs"
required-features = ["host"]
