[package]
name = "lez-payment-streams-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["host"]
# Host-side LEE (`lee` crate): instruction wire + off-chain proofs. Disabled for RISC0 guest builds.
host = ["dep:lee", "lee_core/host", "dep:sha2", "dep:programs", "dep:authenticated_transfer_core"]
# Privacy-preserving LEE proving tests in `program_tests` (slow). Enable with `--features pp-program-tests`.
# `lee_core/test_utils` exposes encapsulate_deterministic for deterministic PP harness keys.
pp-program-tests = ["lee_core/test_utils"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
hex = "0.4"
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
# LEZ harness pin: v0.2.0 (Step 26) — in-process program_tests.
# Operational scaffold / wallet / testnet pin is v0.2.0; see N16.
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", features = ["test-utils"], optional = true }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", default-features = false }
clock_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a" }
programs = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", default-features = false, features = ["artifacts"], optional = true }
authenticated_transfer_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", optional = true }
sha2 = { version = "0.10", optional = true }
spel-framework-macros = { git = "https://github.com/logos-co/spel.git", tag = "v0.5.0" }
spel-framework-core = { git = "https://github.com/logos-co/spel.git", tag = "v0.5.0" }

[[bin]]
name = "n8_canonical_wire_hex"
path = "src/bin/n8_canonical_wire_hex.rs"
required-features = ["host"]
