[package]
name = "lez-payment-streams-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "smoke_verify"
path = "src/bin/smoke_verify.rs"

[dependencies]
lez-payment-streams-core = { path = "../lez-payment-streams-core" }
borsh = "1.5"
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "62d9ba10f8f86db3a1f04b329a1bd9d5b893bf60" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "62d9ba10f8f86db3a1f04b329a1bd9d5b893bf60", features = ["host"] }
hex = "0.4"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
hex = "0.4"
