[package]
name = "lez-payment-streams-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "smoke_verify"
path = "src/bin/smoke_verify.rs"

[dependencies]
lez-payment-streams-core = { path = "../lez-payment-streams-core" }
borsh = "1.5"
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", features = ["host"] }
hex = "0.4"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
hex = "0.4"
