[package]
name = "lez_payment_streams_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1", features = ["host"] }
clock_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }

[dev-dependencies]
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1", features = ["test-utils"] }
spel-framework-core = { git = "https://github.com/logos-co/spel.git", rev = "3457c7431e9b5b88661ed87b53677511ef88d113" }
sha2 = "0.10"
