[package]
name = "lez_payment_streams-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "lez_payment_streams"
path = "src/bin/lez_payment_streams.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", tag = "v0.5.0" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", default-features = false }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
lez-payment-streams-core = { path = "../../lez-payment-streams-core", default-features = false }
authenticated_transfer_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"

[patch."https://github.com/logos-co/spel.git"]
spel-framework-core = { path = "../../vendor/spel-framework-core" }
spel-framework-macros = { path = "../../vendor/spel-framework-macros" }
spel-framework = { path = "../../vendor/spel-framework" }
