[package]
name = "lez_payment_streams-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "lez_payment_streams"
path = "src/bin/lez_payment_streams.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", tag = "v0.5.0" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", default-features = false }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
lez-payment-streams-core = { path = "../../lez-payment-streams-core", default-features = false }
authenticated_transfer_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"

[patch."https://github.com/logos-co/spel.git"]
spel-framework-core = { path = "../../vendor/spel-framework-core" }
spel-framework-macros = { path = "../../vendor/spel-framework-macros" }
spel-framework = { path = "../../vendor/spel-framework" }
