[package]
name = "lez_payment_streams-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }
style       = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
indexing_slicing = "deny"
module_name_repetitions = "allow"
similar_names = "allow"

[lints]
workspace = true

[profile.release]
# Part of program identity: the ImageID is computed over the release-stripped
# binary, so every deploy/testnet must use this exact profile. A rebuild with a
# different profile produces a different ImageID and invalidates every PDA
# derived from it. Matches the lez-programs convention.
debug = 0
strip = "symbols"

[[bin]]
name = "lez_payment_streams"
path = "src/bin/lez_payment_streams.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", tag = "v0.5.0" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", default-features = false }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
lez-payment-streams-core = { path = "../../lez-payment-streams-core", default-features = false }
authenticated_transfer_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"

[patch."https://github.com/logos-co/spel.git"]
spel-framework-core = { path = "../../vendor/spel-framework-core" }
spel-framework-macros = { path = "../../vendor/spel-framework-macros" }
spel-framework = { path = "../../vendor/spel-framework" }
