[package]
name = "lez-testnet-submit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Step 18 temporary rc3 wallet helper for payment-streams chainAction writes"

[[bin]]
name = "lez-testnet-submit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
borsh = "1.5"
base64 = "0.22"
url = "2.5"
base58 = "0.2"

wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "cf3639d8252040d13b3d4e933feb19b42c76e14a", package = "wallet" }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "cf3639d8252040d13b3d4e933feb19b42c76e14a", package = "nssa" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "cf3639d8252040d13b3d4e933feb19b42c76e14a", package = "nssa_core" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "cf3639d8252040d13b3d4e933feb19b42c76e14a", package = "common" }
risc0-zkvm = { version = "3.0.5", features = ["std"] }

[dev-dependencies]
tempfile = "3"
