[package]
name = "lez-testnet-submit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Step 18 temporary wallet helper for payment-streams chainAction writes"

[[bin]]
name = "lez-testnet-submit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
borsh = "1.5"
base58 = "0.2"
url = "2.5"

wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", package = "wallet" }
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", package = "lee" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", package = "lee_core" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", package = "common" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", package = "sequencer_service_rpc", features = ["client"] }
risc0-zkvm = { version = "3.0.5", features = ["std"] }

[dev-dependencies]
tempfile = "3"
