[package]
name = "lez-testnet-submit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Step 18 temporary wallet helper for payment-streams chainAction writes"

[[bin]]
name = "lez-testnet-submit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
borsh = "1.5"
base58 = "0.2"
url = "2.5"

wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", package = "wallet" }
lee = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", package = "lee" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", package = "lee_core" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", package = "common" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "a58fbce2ff48c58b7bb5001b1a27e64b9596ee3a", package = "sequencer_service_rpc", features = ["client"] }
lez-payment-streams-core = { path = "../../lez-payment-streams-core" }

[patch."https://github.com/logos-co/spel.git"]
spel-framework-core = { path = "../../vendor/spel-framework-core" }
spel-framework-macros = { path = "../../vendor/spel-framework-macros" }

[dev-dependencies]
tempfile = "3"
